syntax = "proto3";

package com.<no value>.<no value>.email;

option java_multiple_files = true;
option java_package = "com.<no value>.<no value>.model";
option java_outer_classname = "EmailServiceProto";

service EmailService {
  rpc sendFormattedMail (MailRequestDTO) returns (MailResponseDTO) {
  }
}

message MailRequestDTO {
  string email = 1;
  string type = 2;
  map<string, string> params = 3;
}

message MailResponseDTO {
  string response = 1;
}
